[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/RoundedButtonStyleBox.tres" type="StyleBox" id=1]
[ext_resource path="res://Fonts/SmallText.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/HelpButton.gd" type="Script" id=3]
[ext_resource path="res://UI/Border_RoundedButtonStyleBox.tres" type="StyleBox" id=4]
[ext_resource path="res://Fonts/MediumText.tres" type="DynamicFont" id=5]

[node name="HelpButton" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -300.0
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 600, 600 )
custom_styles/panel = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 30
custom_constants/margin_top = 20
custom_constants/margin_left = 30
custom_constants/margin_bottom = 20

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 30.0
margin_top = 20.0
margin_right = 570.0
margin_bottom = 580.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer3"]
margin_right = 540.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer3/VBoxContainer"]
margin_right = 540.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 5 )
text = "Help!"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer3/VBoxContainer"]
margin_top = 42.0
margin_right = 540.0
margin_bottom = 57.0
custom_constants/separation = 15

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer3"]
margin_top = 61.0
margin_right = 540.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer3/VBoxContainer2"]
margin_right = 540.0
margin_bottom = 348.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "Welcome to Iron Idle! Here are a few tips to help you get started on your virtual fitness journey:

- Select an exercise and click Start to begin exercising.

- Every rep will net you money, strength, and proficiency.

- When your strength levels are high enough, you can perform more difficult exercises. For more information, click on the muscle icons in the Side Panel.

- Some exercises require extra equipment. Check out the store and purchase whatever you need!"
valign = 1
autowrap = true

[node name="Label2" type="Label" parent="Panel/MarginContainer/VBoxContainer3/VBoxContainer2"]
margin_top = 352.0
margin_right = 540.0
margin_bottom = 499.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Have fun, and thank you for playing!"
align = 1
valign = 1
autowrap = true

[node name="Button_Help" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -65.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = 65.0
grow_horizontal = 0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = ExtResource( 1 )
text = "?"

[node name="Button_Exit" type="Button" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -65.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = 65.0
grow_horizontal = 0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = ExtResource( 1 )
text = "x"

[connection signal="pressed" from="Button_Help" to="." method="_on_Button_Help_pressed"]
[connection signal="pressed" from="Button_Exit" to="." method="_on_Button_Exit_pressed"]
